# semantic-kernel-experiments

./: .env.example  pyproject.toml  requirements.txt
Chat_Completion_Agent/: app.py  github.py  pyproject.toml
Coordinate_Agent_Collaboration_using_Agent_Group_Chat/: app.py  pyproject.toml
Open_AI_Assistant_Agent_Code_Interpreter/: PopulationByAdmin1.csv  PopulationByCountry.csv  app.py  pyproject.toml
Open_AI_Assistant_Agent_File_Search/: app.py  pyproject.toml
azure_ai_agent/: pyproject.toml  requirements.txt  step7_azure_ai_agent_retrieval.py  step8_azure_ai_agent_blog_writer.py
getting_started_with_agents/: step10_assistant_tool_file_search.py  step1_agent.py  step2_plugins.py  step3_chat.py  step4_kernel_function_strategies.py  step5_json_result.py  step6_logging.py  step7_assistant.py  step8_assistant_vision.py  step9_assistant_tool_code_interpreter.py
