[project]
name = "semantic-kernel-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "semantic-kernel>=1.17.1",
]

[tool.uv.workspace]
members = ["Chat_Completion_Agent", "Open_AI_Assistant_Agent_Code_Interpreter", "Open_AI_Assistant_Agent_File_Search", "Coordinate_Agent_Collaboration_using_Agent_Group_Chat"]
